--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,10 @@
 {
   "dependencies": {
     "com.unity.2d.aseprite": "1.0.1",
+    "com.unity.2d.spriteshape": "10.0.2",
+    "com.unity.2d.tilemap": "1.0.0",
+    "com.unity.2d.tilemap.extras": "4.0.2",
+    "com.unity.feature.2d": "2.0.0",
     "com.unity.ide.rider": "3.0.27",
     "com.unity.inputsystem": "1.7.0",
     "com.unity.ugui": "1.0.0",
